# EngCalc

./: .gitignore  Cargo.toml
.github/workflows/: release.yml
src/: app.rs  main.rs
src/core/: ast.rs  constants.rs  dimensions.rs  env.rs  evaluator.rs  formatter.rs  functions.rs  greek.rs  integration.rs  lexer.rs  mod.rs  parser.rs  units.rs  value.rs
src/storage/: config.rs  history.rs
src/tests/: calculator_tests.rs  mod.rs
src/tui/: events.rs  input.rs  layout.rs  mod.rs  render.rs  theme.rs
