[package]
name = "engcalc"
version = "0.1.0"
edition = "2021"
description = "A scientific terminal calculator with modern TUI"
authors = ["engcalc contributors"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
